# cmakeAndGtest

./: CMakeLists.txt  main.cpp  main.cxx  runTest.bat
Problem/: CMakeLists.txt  solve.cpp  solve.h
Sample-Test2/: CMakeLists.txt  CMakelists.txt  sampleTest.cpp  sampleTest.h  test.cpp
